RMX2001: Fix OTG
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>
Change-Id: Iea44c6fcc4412b7f89b6bed41e0044029353438e

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -49,6 +49,9 @@ on boot
     # Enable oppo touchpanel direction
     write /proc/touchpanel/oppo_tp_direction 1
 
+    # OTG
+    write /sys/class/power_supply/usb/otg_switch 1
+
 on property:sys.boot_completed=1
     setprop vendor.oppo.biometrics.fingerprint.boot_completed 1
     
