RMX2001: rootdir: Disable edge limit control interface
 * Enable oppo touchpanel direction too
 * Fixes multitouch on edge issue

Signed-off-by: SamarV-121 <samarvispute121@gmail.com>
Change-Id: Iedf8d3a22e5c154e4f8d1e4dcf03dee39f876c43

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -43,6 +43,12 @@ on boot
     # Set permission for Goodix FP
     chown system system /dev/goodix_fp
 
+    # Disable edge limit control interface
+    write /proc/touchpanel/oppo_tp_limit_enable 0
+
+    # Enable oppo touchpanel direction
+    write /proc/touchpanel/oppo_tp_direction 1
+
 on property:sys.boot_completed=1
     setprop vendor.oppo.biometrics.fingerprint.boot_completed 1
     
