RMX2001: rootdir: Disable oppo face hal
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -59,3 +59,7 @@ service oppo_fingerprints_sh /vendor/bin/sh /vendor/bin/init.oppo.fingerprints.s
     class main
     user root
     oneshot
+
+service face_hal /system/bin/true
+    oneshot
+    disabled
