RMX2001: fstab: Perform latemount for data
- Needed to setup encyrption correctly

Signed-off-by: SamarV-121 <samarvispute121@gmail.com>
Change-Id: I8292212c4910af9b90a2ea6b9f7cd83209906d4d

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -6,6 +6,10 @@ on init
     # We only need it to be overridden before things are mounted
     mount none /system/etc/fstab.mt6785 /vendor/etc/fstab.mt6785 bind
 
+on fs
+    mount_all /vendor/etc/fstab.mt6785 --early
+    mount_all /vendor/etc/fstab.mt6785 --late
+
 on post-fs
     # Unmount the overridden fstab because the SELinux label is incorrect
     # and some MTK daemons can crash because of that
