RMX2001: Disable serial console notification
Google added a check for this prop in R, and if it's running
it will show a notification about it that it's impacting performance.
Why it's not disabled by default I don't know, so just force disable
it here.

Change-Id: Ia06ef15388e7e701ed526664e7748f133ad01ee2
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -39,6 +39,8 @@ on post-fs-data
     chmod 0600 /sys/bus/platform/devices/fpc_interrupt/irq
     chmod 0660 /sys/bus/platform/devices/fpc_interrupt/irq_unexpected
 
+    # Services
+    setprop init.svc.console stopped
 on boot
     # Set permission for Goodix FP
     chown system system /dev/goodix_fp
