--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -1,4 +1,6 @@
 on init
+    mount none /vendor/lost+found /vendor/overlay bind
+
     # Custom overrides that need to happen right on boot
     # Override vendor fstab
     # We only need it to be overridden before things are mounted
