--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -14,5 +14,35 @@ on post-fs
     umount /vendor/etc/fstab.mt6785
 
 on post-fs-data
+    # VideoCodec
     chmod 0666 /dev/video0
     chmod 0666 /dev/video1
+
+    # Create Goodix FP related directories
+    mkdir /data/gf_data 0700 system system
+    mkdir /data/system/gf_data 0700 system system
+    mkdir /data/images 0700 system system
+
+    # Set permissions for FPC FP
+    chown system  system /sys/bus/platform/devices/fpc_interrupt/clk_enable
+    chown system  system /sys/bus/platform/devices/fpc_interrupt/wakelock_enable
+    chown system  system /sys/bus/platform/devices/fpc_interrupt/irq
+    chown system  system /sys/bus/platform/devices/fpc_interrupt/irq_enable
+    chown system  system /sys/bus/platform/devices/fpc_interrupt/irq_unexpected
+    chmod 0200 /sys/bus/platform/devices/fpc_interrupt/irq_enable
+    chmod 0200 /sys/bus/platform/devices/fpc_interrupt/clk_enable
+    chmod 0200 /sys/bus/platform/devices/fpc_interrupt/wakelock_enable
+    chmod 0600 /sys/bus/platform/devices/fpc_interrupt/irq
+    chmod 0660 /sys/bus/platform/devices/fpc_interrupt/irq_unexpected
+
+on boot
+    # Set permission for Goodix FP
+    chown system system /dev/goodix_fp
+
+on property:sys.boot_completed=1
+    setprop vendor.oppo.biometrics.fingerprint.boot_completed 1
+
+service oppo_fingerprints_sh /vendor/bin/sh /vendor/bin/init.oppo.fingerprints.sh
+    class main
+    user root
+    oneshot
