RMX2001: rootdir: Disable AOSP RIL service conditonally
Noticed constant crashes without any reason and MTK RIL service
doesn't seems dependent upon it

Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>
Change-Id: I24c758d984dabe1696ea1bc2fbd1a7a98c4898fa
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -62,3 +62,7 @@ service oppo_fingerprints_sh /vendor/bin/sh /vendor/bin/init.oppo.fingerprints.s
     class main
     user root
     oneshot
+
+# Disable AOSP RIL if MTK RIL is up
+on property:vendor.ril.mtk=1
+    stop vendor.ril-daemon
