--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -20,17 +20,6 @@ on post-fs-data
     # Services
     setprop init.svc.console stopped
 
-on boot
-
-    # Disable edge limit control interface
-    write /proc/touchpanel/oppo_tp_limit_enable 0
-
-    # Enable oppo touchpanel direction
-    write /proc/touchpanel/oppo_tp_direction 1
-
-    # OTG
-    write /sys/class/power_supply/usb/otg_switch 1
-
 on property:sys.boot_completed=1
     # ZRAM
     swapon_all /vendor/fstab.enableswap
@@ -38,3 +27,18 @@ on property:sys.boot_completed=1
 # Disable AOSP RIL if MTK RIL is up
 on property:vendor.ril.mtk=1
     stop vendor.ril-daemon
+
+# Performance profiles
+on property:persist.perf_profile=0
+    exec - root -- /system/bin/perf_profile.sh 0
+
+on property:persist.perf_profile=1
+    exec - root -- /system/bin/perf_profile.sh 1
+
+on property:persist.perf_profile=2
+    exec - root -- /system/bin/perf_profile.sh 2
+
+on property:sys.boot_completed=1
+    chown root root /sys/module/ged/parameters/gx_force_cpu_boost
+    chown root root /proc/cpufreq/cpufreq_power_mode
+    chown root root /proc/cpufreq/cpufreq_cci_mode
