mt6785-common: Disable edge limit control globally
* based rUI-1.0

Change-Id: I0f55168baf9886cef4722e330fce3ed83da2c95f
Signed-off-by: SamarV-121 <samarvispute121@pm.me>

--- a/rootdir/etc/init.mt6785.rc
+++ b/rootdir/etc/init.mt6785.rc
@@ -24,6 +24,10 @@ on property:sys.boot_completed=1
     # ZRAM
     swapon_all /vendor/fstab.enableswap
 
+    # Touchpanel
+    write /proc/touchpanel/oppo_tp_limit_enable 0
+    write /proc/touchpanel/oppo_tp_direction 1
+
 # Disable AOSP RIL if MTK RIL is up
 on property:vendor.ril.mtk=1
     stop vendor.ril-daemon
